SonarLint Fix